[package]
name = "qbit"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = false
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.100"
bendy = { version = "0.6.1", features = ["serde"] }
clap = "4.5.53"
crossterm = "0.29.0"
form_urlencoded = "1.2.2"
hex = "0.4.3"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
