[package]
name = "qbit"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = false
opt-level = "z"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.100"
bendy = { version = "0.6.1", features = ["serde"] }
bytes = "1.11.0"
ciborium = "0.2.2"
clap = "4.5.53"
crossterm = "0.29.0"
dirs = "6.0.0"
form_urlencoded = "1.2.2"
hex = "0.4.3"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["bytes", "fs", "macros", "net", "rt-multi-thread"] }


[dev-dependencies]
# (0_0;) what